# agentkit

./: .dockerignore  .gitignore  .golangci.yaml  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.agents/skills/autoreview/: SKILL.md
.agents/skills/pr-closeout/: SKILL.md
.agents/skills/pr-closeout/agents/: openai.yaml
.agents/skills/pr-closeout/scripts/: pr_snapshot.sh
.claude/skills/: pr-closeout
.github/workflows/: ci.yml
agentkit-serve/: Dockerfile  README.md  pyproject.toml
agentkit-serve-maf/: Dockerfile  README.md  pyproject.toml
agentkit-serve-maf/agentkit_serve/: __main__.py  agent_factory.py  config.py  server.py
agentkit-serve-maf/tests/: test_guardrails.py  test_server.py
agentkit-serve/agentkit_serve/: __main__.py  agent_factory.py  server.py
agentkit-serve/tests/: conftest.py  test_server.py
agentkit_serve_common/: README.md
agentkit_serve_common/agentkit_serve_common/: __init__.py  cli.py  conformance.py
cmd/frontend/: main.go
deploy/foundry/: README.md  agentkit.foundry.yaml.example  doctor.sh  render_agent.py
deploy/foundry/memory/: setup.sh
deploy/foundry/rbac/: assign-agent-identity.sh
deploy/foundry/scripts/: foundry_brokered_conformance.sh  invoke_responses.sh  local_brokered_conformance_container.sh  verify_brokered_transcript.py
deploy/foundry/search/: setup.sh
deploy/foundry/toolbox/: setup.sh
docs/: agent-abi.md  agentkitfile.md  architecture.md  development.md  foundry-hosted-brokered.md  orka.md  runtime-adapters.md  runtime-capabilities.md
pkg/agentkit/abi/: render.go  render_test.go
pkg/agentkit/abi/testdata/: agent.yaml  edge-cases.yaml
pkg/agentkit/config/: config_test.go  labels.go  load.go  source.go  specs.go  tool.go  validate.go
pkg/agentkit/effective/: agent.go  agent_test.go
pkg/agentkit/render/: orka.go  orka_test.go
pkg/agentkit/runtimes/: catalog.go  catalog_file_test.go  catalog_test.go
pkg/agentkit2llb/agent/: convert.go  image.go  image_test.go  render.go  render_test.go
pkg/utils/: const.go  llbutil.go  runtime.go  runtime_test.go  util.go
pkg/version/: version.go
runners/: pydantic-ai.yaml
runtimes/catalog/: langgraph.yaml  microsoft-agent-framework.yaml  pydantic-ai.yaml
runtimes/common/: README.md  pyproject.toml
runtimes/common/agentkit_serve_common/: __init__.py  adapter_support.py  brokered.py  cli.py  config.py  conformance.py  conversation.py  foundry.py  foundry_brokered_cli.py  foundry_conformance.py  foundry_model_loop.py  orka.py  runtime.py  server.py  yaml_support.py
runtimes/common/tests/: _brokered_description_cases.py  test_abi_contract.py  test_adapter_support.py  test_brokered_runtime_interface.py  test_brokered_schema.py  test_cli_protocol.py  test_config_validation.py  test_conversation.py  test_foundry_brokered_conformance_script.py  test_foundry_brokered_protocol.py  test_foundry_conformance.py  test_foundry_protocol.py  test_foundry_transcript_verifier.py  test_orka_protocol.py  test_runtime_lifecycle.py  test_server_session.py
runtimes/common/tests/fixtures/foundry_brokered/: approval_declined_payload.json  continuation_request.json  final_message_response.json  function_call_response.json  initial_request.json  multiple_function_calls_unsupported_error.json  tool_execution_failure_payload.json  tool_policy_rejection_payload.json  unknown_call_id_error.json  unknown_previous_response_id_error.json
runtimes/langgraph/: Dockerfile  README.md  pyproject.toml
runtimes/langgraph/agentkit_serve/: __init__.py  __main__.py  agent_factory.py
runtimes/langgraph/tests/: conftest.py  test_guardrails.py  test_lifecycle.py  test_remote_mcp.py  test_server.py
runtimes/microsoft-agent-framework/: Dockerfile  README.md  pyproject.toml
runtimes/microsoft-agent-framework/agentkit_serve/: __init__.py  agent_factory.py
runtimes/microsoft-agent-framework/tests/: conftest.py  test_dependency_compat.py  test_guardrails.py  test_lifecycle.py  test_remote_mcp.py  test_server.py
runtimes/pydantic-ai/: Dockerfile  README.md  pyproject.toml
runtimes/pydantic-ai/agentkit_serve/: __init__.py  agent_factory.py
runtimes/pydantic-ai/tests/: conftest.py  test_lifecycle.py  test_orka_lifecycle.py  test_remote_mcp.py  test_unsupported_features.py
scripts/: live-copilot-agent-e2e.sh
test/: agentkitfile-hello.yaml  agentkitfile-langgraph-hello.yaml  agentkitfile-langgraph-tools.yaml  agentkitfile-live.yaml  agentkitfile-maf-hello.yaml  agentkitfile-maf-live.yaml  agentkitfile-maf-memory-live.yaml  agentkitfile-maf-search-live.yaml  agentkitfile-maf-tools-live.yaml  agentkitfile-maf-tools.yaml  agentkitfile-tools.yaml
test/foundry-brokered-agentkit/: Dockerfile  README.md  agent.yaml
test/foundry-brokered-conformance/: Dockerfile  README.md  foundry.agent.yaml.example
test/foundry-hosted-agent/: Dockerfile  README.md  agentkitfile.yaml  foundry.agent.yaml.example  foundry_invocations.py  foundry_live.py  request.json
