[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-serve"
version = "0.0.0"
description = "AgentKit runtime adapter: serves an OpenAI Chat-Completions facade backed by a pydantic-ai agent with stdio MCP tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentKit" }]
dependencies = [
    # MCPServerStdio is available in pydantic-ai 1.x; 2.x removed/renamed it.
    "pydantic-ai>=0.0.40,<2",
    # The framework-neutral core (ABI loader, /v1 facade, CLI). Brings fastapi,
    # uvicorn, pydantic, pyyaml transitively. Resolved from the sibling path in dev
    # (see [tool.uv.sources]) and COPYed + installed in the Docker image build.
    "agentkit-serve-common",
]

[tool.uv.sources]
agentkit-serve-common = { path = "../agentkit_serve_common", editable = true }

[project.scripts]
agentkit-serve = "agentkit_serve.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["agentkit_serve"]
