[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-serve"
version = "0.0.0"
description = "AgentKit runtime adapter: serves an OpenAI Chat-Completions facade backed by a LangChain/LangGraph agent with stdio MCP tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentKit" }]
dependencies = [
    "langchain>=1.2,<2",
    "langgraph>=1.1,<3",
    "langchain-openai>=1.0,<2",
    "langchain-mcp-adapters>=0.2,<1",
    "mcp>=1.24,<2",
    # The framework-neutral core (ABI loader, /v1 facade, CLI). Brings fastapi,
    # uvicorn, pydantic, pyyaml transitively. Resolved from the sibling path in dev
    # (see [tool.uv.sources]) and COPYed + installed in the Docker image build.
    "agentkit-serve-common",
]

[tool.uv.sources]
agentkit-serve-common = { path = "../common", editable = true }

[project.scripts]
agentkit-serve = "agentkit_serve.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["agentkit_serve"]
