[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-serve-maf"
version = "0.0.0"
description = "AgentKit runtime adapter (Microsoft Agent Framework): OpenAI /v1 facade over a MAF agent with stdio MCP tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentKit" }]
dependencies = [
    # Microsoft Agent Framework — bounded slice only (plan §12 lock-in boundary):
    # core + OpenAI client + provider adapters needed by generic AgentKit capabilities.
    # Do not pull unrelated Copilot Studio/Purview/etc. packages.
    "agent-framework-core>=1.9,<2",
    # NOTE: agent-framework-openai's latest is 1.8.2 (verified in the M0 spike);
    # the plan's >=1.9 pin would fail to resolve. Pin >=1.8,<2.
    "agent-framework-openai>=1.8,<2",
    "agent-framework-foundry>=1.8,<2",
    "agent-framework-azure-ai-search>=1.0.0b260521,<2",
    "azure-identity>=1.20",
    # The MCP SDK is NOT a transitive dependency of agent-framework-core — it is
    # lazily imported by agent_framework._mcp and only bundled via the heavy
    # `[all]` extra (which drags in azure/foundry). Declare it directly so stdio
    # MCP tools work without crossing the lock-in boundary. (Verified in M0.)
    "mcp>=1.24,<2.0.0a0",
    # The framework-neutral core (ABI loader, /v1 facade, CLI). Brings fastapi,
    # uvicorn, pydantic, pyyaml transitively. Resolved from the sibling path in dev
    # (see [tool.uv.sources]) and COPYed + installed in the Docker image build.
    "agentkit-serve-common",
]

[tool.uv.sources]
agentkit-serve-common = { path = "../common", editable = true }

[project.scripts]
agentkit-serve = "agentkit_serve.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["agentkit_serve"]
